kubernetes/server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
  namespace: track-expenses
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - image: oxisto/track-expenses-server
        imagePullPolicy: Always
        name: server
        ports:
        - containerPort: 4300
          protocol: TCP
      imagePullSecrets:
      - name: registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: track-expenses
spec:
  ports:
  - port: 4300
    protocol: TCP
    targetPort: 4300
  selector:
    app: server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-api
  namespace: track-expenses
spec:
  rules:
  - host: expenses.aybaze.com
    http:
      paths:
      - backend:
          serviceName: server
          servicePort: 4300
        path: /api
  tls:
  - hosts:
    - expenses.aybaze.com
    secretName: expenses-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-auth
  namespace: track-expenses
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: expenses.aybaze.com
    http:
      paths:
      - backend:
          serviceName: server
          servicePort: 4300
        path: /auth
  tls:
  - hosts:
    - expenses.aybaze.com
    secretName: expenses-tls
